$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.12 1997/10/29 21:29:09 jcmurphy Exp $

CHANGES for ARSperl

Revision history for ARSperl.

MM/DD/YY
=======================================================================
#######################################################################
=======================================================================
10/29/97        (1.5204)

  o (JCM)  added ars_GetControlStructFields()

=======================================================================
#######################################################################
=======================================================================
10/20/97        (1.5203)
 
  o (JCM)  beginnings of a WinNT port (not completed yet)
  o (JCM)  added "timestamp" to the return hash of GetEscalation()
  o (JCM)  added some extra malloc/free debugging stuff

=======================================================================
#######################################################################
=======================================================================
10/13/97        (1.5202)
 
  o (JCM)  removed a superfluous debugging statement

=======================================================================
#######################################################################
=======================================================================
10/09/97        (1.5201)
 
  o (JCM)  fixed problem in GetEscalation     

=======================================================================
#######################################################################
=======================================================================
10/08/97        (1.52)
 
  o (JCM)  fixed core dump problem due to uninitialized variable(s)

=======================================================================
#######################################################################
=======================================================================
10/07/97        (1.51)
 