@@ -1,10 +1,18 @@
-$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.12 1997/10/29 21:29:09 jcmurphy Exp $
+$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.13 1997/11/04 18:15:20 jcmurphy Exp $
 
 CHANGES for ARSperl
 
 Revision history for ARSperl.
 
 MM/DD/YY
+=======================================================================
+#######################################################################
+=======================================================================
+11/04/97	(1.5205)
+
+  o (JCM)  updated the groupList value returned by GetSchema()
+           so that it contains the correct key words.
+
 =======================================================================
 #######################################################################
 =======================================================================
